
  [ Pino Toscano ]
  * Drop the Ghostscript headers removal, as upstream does not ship them
    anymore, and consequently the "Debian source" suffix.
    + adapt the watch file to not mangle the 'ds' suffix.
  * Disable the update of the autotools build system, no more needed now
    (as it is not changed).
  * Do not require and use quilt, as we have no more patches to apply.
  * Add a versioned shlibs.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Fri, 22 Jan 2010 00:00:45 +0100

libspectre (0.2.2.ds-3) unstable; urgency=low

   +++ Changes by Armin Berres:

  * Remove ununsed libspectre.la from -dev package (Closes: #548341).

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Sun, 04 Oct 2009 17:49:14 +0200

libspectre (0.2.2.ds-2) unstable; urgency=low

   +++ Changes by Sune Vuorela:

  * Switch Maintainer field to krap team and remove Matthew, he seems absent. 
    We hope he comes back.
  * Add me to uploaders.
  * Autoreconf; fixes FTBFS: (Closes: 543074)
    - Add post-patches and clean targets.
    - Update DEB_AUTO_UPDATE_AUTOMAKE to 1.12.
  * Bump Standards-Version to 3.8.3.
  * Move -dbg package to debug section.

  +++ Changes by Ana Beatriz Guerrero Lopez:
  
  * Add README.source file.
  * Update to DEB_AUTO_UPDATE_AUTOCONF=2.64.
  * Small packaging copyright update.

 -- Debian Krap Maintainers <debian-qt-kde@lists.debian.org>  Sat, 05 Sep 2009 16:27:52 +0200

libspectre (0.2.2.ds-1) unstable; urgency=low

  * New upstream release.
    + Fixes rendering of Mozilla-generated files. (Closes: #484645)
    + Correctly loads EPS files with TIFF previews. (Closes: #490309)
  * Make prune-ghostscript script actually work.
  * Update Autotools instead of direct patching.
    + Add Build-Depends on autoconf, automake, and libtool.
    + Switch to from CDBS simple patch system to quilt.
    + Rewrite strip_ghostscript.patch as use-system-ghostscript.patch.
  * Bump Standards-Version to 3.8.0, no changes required.